--- a/scss/components/_controls.scss
+++ b/scss/components/_controls.scss
@@ -20,7 +20,7 @@
             }
         }
 
-        input[type="text"] {
+        input[type="number"], input[type="text"] {
             height: 2em;
             line-height: normal;
             padding: 1px 0.25em;
